--- a/Action/FlowFusion.Action.FlowControl/FlowFusion.Action.FlowControl.csproj
+++ b/Action/FlowFusion.Action.FlowControl/FlowFusion.Action.FlowControl.csproj
@@ -7,8 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference
-			Include="..\..\Service\FlowFusion.Service.Scripting\FlowFusion.Service.Scripting.csproj" />
+		<ProjectReference Include="..\..\Service\FlowFusion.Service.FlowControl\FlowFusion.Service.FlowControl.csproj" />
+		<ProjectReference Include="..\..\Service\FlowFusion.Service.Scripting\FlowFusion.Service.Scripting.csproj" />
 		<ProjectReference Include="..\FlowFusion.Action.Main\FlowFusion.Action.Main.csproj" />
 	</ItemGroup>
 </Project>
