--- a/Service/FlowFusion.Service.Variable/FlowFusion.Service.Variable.csproj
+++ b/Service/FlowFusion.Service.Variable/FlowFusion.Service.Variable.csproj
@@ -11,10 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\Action\FlowFusion.Action.Main\FlowFusion.Action.Main.csproj" />
 	  <ProjectReference Include="..\..\Core\FlowFusion.Core.Main\FlowFusion.Core.Main.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="XXXXXXXXXXXX\XXXXXXXXXXXX - Copy\" />
 	</ItemGroup>
 </Project>
